fix: tag styles on mobile for subscribe form

--- a/src/components/blocks/subscribe/subscribe.scss
+++ b/src/components/blocks/subscribe/subscribe.scss
@@ -11,6 +11,14 @@
         @apply block w-full rounded-md border border-gray px-4 py-3 max-w-md;
     }
 
+    .tag {
+        @apply flex mr-0;
+
+        @screen sm {
+            @apply inline-flex mr-3;
+        }
+    }
+
     button {
         @apply mt-0;
 
